refactor: Collectors.toList()를 Stream.toList()로 교체